<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <Button
        android:id="@+id/button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_button"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/findIdSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findId" />

    <TextView
        android:id="@+id/findIdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findIdName" />

    <EditText
        android:id="@+id/findIdNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/findIdNameField"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <TextView
        android:id="@+id/findIdTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findIdTelephone" />

    <EditText
        android:id="@+id/findIdTelephoneField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/createTelephoneField" />

    <Button
        android:id="@+id/findIdSearchB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findSearchB" />

    <TextView
        android:id="@+id/findPasswordSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findPasswordSection" />

    <TextView
        android:id="@+id/findPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findPasswordId" />

    <EditText
        android:id="@+id/findPasswordIdField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/findPasswordIdField"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <TextView
        android:id="@+id/findPasswordUserChecker"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:text="@string/findPasswordUserChecker"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTelephoneField" />

    <Spinner
        android:id="@+id/findPasswordSpinner"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:entries="@array/CheckList"
        app:layout_constraintBottom_toTopOf="@+id/createUserCheckerField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUserChecker" />

    <EditText
        android:id="@+id/findPasswordUserCheckerField"
        tools:targetApi="o"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createUserCheckerField"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/createSecurity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/findPasswordSearchB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findSearchB" />

</LinearLayout>